// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package service;

//矩形
service Rect {
  rpc Area (RectParamIn) returns (RectParamOut) {};
  rpc Perimeter (RectParamIn) returns (RectParamOut) {};
}
message RectParamIn {
  int64 width = 1;
  int64 height = 2;
}
message RectParamOut {
  int64 result = 1;
}

//鉴权
service Auth {
  rpc Auth (AuthParamIn) returns (AuthParamOut) {};
}
message AuthParamIn {
  int64  uid = 1;
  string tokenId = 2;
}
message AuthParamOut {
  string result = 1;
}